2002-09-04  Ion Badulescu  <ion@guppy.limebrokerage.com>

	* amd/amfs_auto.c (amfs_auto_lookup_mntfs): use ereturn() instead
	of "return NULL" to signal an error to the upper layers
	(amfs_auto_mount): use strdup so the string can be free'd later on
	[Debian bug report from Matt Chapman <matthewc@cse.unsw.edu.au>]

2002-09-03  Ion Badulescu  <ion@guppy.limebrokerage.com>

	Patches from George Ross <gdmr@dcs.ed.ac.uk>:

	* amd/amfs_auto.c (assign_error_mntfs): do not discard old mntfs,
	it will be done in free_continuation(); assorted debugging messages

	* amd/srvr_nfs.c (nfs_timed_out): allocate a new XID on server
	timeout to avoid problems with late ping replies

	* amd/mntfs.c (free_mntfs): sanity check for mf_refc; assorted
	debugging messages

	* amd/map.c (unmount_node): more verbose debug message

2002-07-29  Ion Badulescu  <ion@guppy.limebrokerage.com>

	* amd/amfs_auto.c (amfs_auto_lookup_mntfs): prevent deferencing
	de-allocated memory in str3cat
	(amfs_auto_lookup_mntfs): check for buffer overflow

2002-07-11  Erez Zadok  <ezk@agora.fsl.cs.sunysb.edu>

	* scripts/expn.{1,in}: fixed typos as reported by Thomas Klausner
	<wiz@danbala.ifoer.tuwien.ac.at>.

2002-06-26    <ezk@agora.fsl.cs.sunysb.edu>

	* doc/Makefile.am (install-html): don't use locally hacked
	texi2html features.

	* conf/transp/transp_sockets.c (amu_get_myaddress): Most modern
	systems should use 127.0.0.1 as the localhost address over which
	you can do NFS mounts.  In the past we found that some NFS clients
	may not allow mounts from localhost.  So we used get_myaddress()
	and that seemed to work.  Alas, on some other systems,
	get_myaddress() may return one of the interface addresses at
	random, and thus use a less efficient IP address than 127.0.0.1.
	The solution is to hard-code 127.0.0.1, but still check if
	get_myaddress() returns a different value and warn about it.

	* doc/am-utils.texi: don't use ':' in @cindex entries.

2002-06-25  Ion Badulescu  <ion@guppy.limebrokerage.com>
