@@ -1,5 +1,10 @@
 2002-09-04  Ion Badulescu  <ion@guppy.limebrokerage.com>
 
+	* amd/amfs_auto.c (free_continuation): avoid double-free'ing the
+	mntfs if there was an error/timeout
+
+2002-09-04  Ion Badulescu  <ion@guppy.limebrokerage.com>
+
 	* amd/amfs_auto.c (amfs_auto_lookup_mntfs): use ereturn() instead
 	of "return NULL" to signal an error to the upper layers
 	(amfs_auto_mount): use strdup so the string can be free'd later on
